Fixed Bug With Scrollbar
This means dragging the classes has some undesired effects, but for now
this is the lesser of two evils

--- a/src/main/resources/static/studentPage.css
+++ b/src/main/resources/static/studentPage.css
@@ -257,7 +257,7 @@ body {
 
 #wrapper {
     padding-left: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -266,10 +266,11 @@ body {
 
 #wrapper.toggled {
     padding-left: 250px;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 #sidebar-wrapper {
+    overflow: hidden;
     z-index: 1000;
     position: fixed;
     left: 250px;
@@ -278,7 +279,6 @@ body {
     margin-left: -250px;
     overflow-y: auto;
     background: #DDDDDD;
-    overflow: hidden;
 
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
@@ -288,12 +288,13 @@ body {
 
 #sidebar-wrapper {
     text-align: center;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 #wrapper.toggled #sidebar-wrapper {
+    height: 100%;
     width: 250px;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 #page-content-wrapper {
